<resources>
    <string name="app_name">CabreraJonathanApp</string>
    <string name="count_text">Cuenta</string>
    <string name="continue_text">CONTINUAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="procedure_Text">Tramite</string>
    <string name="retiro_text">RETIRO</string>
    <string name="deposito_Text">DEPOSITO</string>
    <string name="cheque_text">CHEQUE</string>
    <string name="resume">Resumen</string>
    <string name="account_text">Cuenta:</string>
    <string name="procedure_text">Tramite:</string>
</resources>